[package]
name = "warp"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
clap = "4.4"
dirs = "5.0.1"
erdp = "0.1.0"
getrandom = { version = "0.2.14", features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
sha3 = "0.10.8"
tabled = "0.15.0"
thiserror = "1.0.58"
ureq = "2.9.6"
url = { version = "2.5.0", features = ["serde"] }
zeroize = "1.7.0"

[build-dependencies]
cc = "1.0.95"
