[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
thiserror = "1.0.57"
url = "2.5.0"

[target.'cfg(unix)'.dependencies]
curl = "0.4.46"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Networking",
    "Win32_Networking_WinHttp"
]
